--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Teste Led</title>
+    <title>Led</title>
 </head>
 <body>
-    <div class="fundo">
+    <div class="background">
         
     <div>
         <h1>Automation with JS</h1>
     </div>
 
-  
-    <button id="ligar" onclick="ligar()">ON</button>
-    <button id="desligar" onclick="desligar()">OFF</button>
 
+<div>
+    <button id="on" onclick="on()">ON</button>
+    <button id="off" onclick="off()">OFF</button>   
 </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase.js"></script>
     <script src="firebase.js"></script>
+
 </body>
 </html>
